# SysMon

./: CMakeLists.txt  README.md  cbstruct.h  controlinfo.h  ddd1  ddd2  ddd3  ddd4  ddd5  ddd6  ddd7  ddd8  defunc.h  eee1  eee2  eee3  eee4  eee5  eee6  eee7  eee8  hotinfo.c  hotinfo.h  init.c  init.h  main.c  main.c.bk  managemon.h  msgloop.c  msgloop.h  startmon.c  startmon.h  sysmon.c  sysmon.h  testfunc.c  testfunc.h
callbacks/: callbacks.h  cbargvs.h  cbargvsdef.h  cbdefine.h  clone.c  clone.h  close.c  execve.c  execve.h  fork.c  fork.h  openat.c  readme.h  rename.c  renameat.c  renameat2.c  write.c  write.h
callbacks/comm/: dos.c  dos.h  getstrarg.c  pidetailed.c
cbtree/: cbtree.c  cbtree.h
cbtree/kmap/: rbtree.c  rbtree.h
general/: dmsg.c  general.h
init/: init.c  init.h  regsoffset.h
kernel/: defunc.h  iteratesys.c  iteratesys.h  kmstructs.h  managethread.c  managethread.h  procinfo.c  procinfo.h  ptraceopt.h  sysmon.c  sysmon.h  workprocess.c  workprocess.h  workthread.c  workthread.h
kernel/managethreads/: managethread.c  managethread.h
kernel/monitorprocs/: defunc.h  pglobal.h  procmain.c  procmain.h  sigevt.c  sigevt.h  taskopt.c  taskopt.h  timeoutadm.c  timeoutadm.h
tree/: cbtree.c  cbtree.h  hotree.c  hotree.h  pidinfo.h  pidtree.c  pidtree.h
tree/kmap/: rbdef.h  rbtree.c  rbtree.h
